2008-04-19  Michal Nazarewicz  <mina86/AT/mina86.com>

	* null.c: + -N switch for adjusting nice
	+ now waits for 1 sec in case child will terminate
	+ -w switch

2008-04-17  Michal Nazarewicz  <mina86/AT/mina86.com>

	* null.c: + removed configuration macros
	+ daemonization also redirects stdin from /dev/null
	+ daemonization also changes dir to root directory
	+ when discardig data from stdin changes dir to root directory
	+ nicer usage message added
	+ when checking command name only first character is analyzed
	+ error checking added

2008-03-06  Michal Nazarewicz  <mina86/AT/mina86.com>

	* the-book-of-mozilla.txt: + two quotes added

2008-02-22  Michal Nazarewicz  <mina86/AT/mina86.com>

	* extractlinks.pl: + added -b option to specify base address

2008-02-07  Michal Nazarewicz  <mina86/AT/mina86.com>

	* FvwmTransFocus.c: + bug where prev_id value was not preserved fixed

2008-01-09  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile: + executes commands using 'exec' (less forks)

	* cdiff.c: + supports more formats
	+ may be run as a wrapper

	* cutcom.c: + new state as a pointer to new state, not index

	* FvwmTransFocus.c, check.sh, libmpdclient.c, libmpdclient.h,
	load.c, malloc.c, mountiso.c, mpd-show.c, mpd-state.c,
	one-time-pass.sh, timer.c, tuptime.c: + better standard compatibility
	+ better portability
	+ better usage of static and inline keywords (in case of C)

2007-08-21  Michal Nazarewicz  <mina86/AT/mina86.com>

	* getlyrics.pl: + added --edit option
	+ files in cache are saved in lower case

2007-08-10  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile: + mpd-show was missing in all target

------- New Release ----------------------------------------------------------

2007-08-09  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile: + fixed doinst.sh
	+ fixed EUID variable
	+ changed ${...} with $(...) -- better backwarde compatiblity

	* Makefile: + fixed doinst.sh
	+ fixed EUID variable